<resources>
    <string name="app_name">EstuDoar</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item >Home</item>
        <item >Find People</item>
        <item >Photos</item>
        <item >Communities</item>
        <item >Pages</item>
        <item >What\'s Hot</item>
    </string-array>


    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_home_page">HomePageActivity</string>
    <string name="go_back">Voltar</string>
    <string name="facebook_app_id">1638841173016859</string>
    <string name="google_maps_api_key">AIzaSyAlmozzrKd9FV-o72EvrXQdqGmjjlC5tMo</string>
    <!--Login screen strings-->
    <string name="login_welcome">Bem vindo ao EstuDoar!</string>
    <string name="login_name">Nome</string>
    <string name="login_username">Login</string>
    <string name="login_password">Senha</string>
    <string name="login_signin">Entrar</string>
    <string name="login_div_text">ou</string>
    <string name="login_signup_text">Criar uma conta</string>
    <string name="login_go_signup">Cadastrar</string>
    <string name="login_facebook">Entrar com Facebook</string>
    <string name="login_forgot">Esqueci minha senha</string>
    <!--Singup screen string-->
    <string name="signup_text">NOVO USUÁRIO</string>
    <string name="signup_email">Email</string>
    <string name="signup_btn">Cadastrar</string>
    <!--Forgor Password strings-->
    <string name="forgot_helptext">Digite seu email cadastrado</string>
    <string name="forgot_request">Requisitar senha</string>
    <string name="home_doar">Doar</string>
    <string name="home_procurar">Procurar</string>
    <string name="title_activity_doar">Doar</string>
    <string name="doar_nome">Nome do material</string>
    <string name="doar_foto">Procurar Foto</string>
    <string name="camera">Câmera</string>
    <string name="doar_cadastrar">Doar</string>
    <string name="doar_add_endereco">Adicionar Endereço</string>
    <string name="add_local_address">Escolher Local Atual</string>
    <string name="add_address">Escreva o endereco de entrega</string>
    <string name="spinner_categoria">Escolha uma categoria</string>
    <string name="assunto_doar">Assunto</string>
    <string name="descricao_doar">Descricao</string>

    <string-array name="categorias_array">
        <item>Livro</item>
        <item>Xerox</item>
        <item>Caderno</item>
        <item>Apostila</item>
        <item>Outro</item>
    </string-array>

    <!-- Doacoes -->
    <string name="search_title">Buscar</string>
    <string name="search_hint">Buscar por material</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_ver_doacao">Doação</string>
    <string name="title_activity_materiais">Doações</string>
    <string name="title_activity_favotires">Meus Favoritos</string>
    <string name="title_activity_my_donations">Minhas doações</string>
    <string name="title_activity_interested">Interessados</string>
    <string name="title_activity_meu_perfil">Perfil</string>
    <string name="title_activity_favoritos">Doações Favoritas</string>
    <string name="title_activity_search">Procurar Doações</string>
    <string name="title_activity_add_endereco">Adicionar Endereço</string>
    <string name="title_activity_analisar_pedido">Analisar Pedido</string>

</resources>

