<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="estudoar.cin.ufpe.br.estudoar.RegisterFragment"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">
    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/signup_text"
        android:text="@string/signup_text"
        android:gravity="center_horizontal"/>
    
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signup_text">

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/uName"
            android:hint="@string/login_name"
            android:focusable="true"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/uLogin"
            android:hint="@string/login_username"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/uEmail"
            android:inputType="textEmailAddress"
            android:hint="@string/signup_email"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:id="@+id/uPassword"
            android:hint="@string/login_password"/>

        <Button
            style="@style/BtnDefault"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnSignup"
            android:text="@string/signup_btn"
            />
    </LinearLayout>


</RelativeLayout>
