<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="estudoar.cin.ufpe.br.estudoar.LoginFragment"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:gravity="center_horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_welcome"
        android:id="@+id/login_welcome"/>

    <LinearLayout
        android:id="@+id/linear_layout_login"
        android:orientation="vertical"
        android:layout_below="@+id/login_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/authLogin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/login_username">
            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/authPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/login_password"
            android:inputType="textPassword"
            >
        </EditText>

        <Button
            style="@style/BtnDefault"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_signin"
            android:id="@+id/btnLogin"/>

        <TextView
            android:text="@string/login_div_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/loginDivText"/>

        <Button
            style="@style/BtnDefault"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_go_signup"
            android:id="@+id/openSignup"/>

        <com.facebook.login.widget.LoginButton
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:id="@+id/facebookBtn"
            android:layout_marginBottom="30dp"
            />

    </LinearLayout>

</RelativeLayout>
