<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="estudoar.cin.ufpe.br.estudoar.ForgotPasswordFragment">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/forgot_helptext"
        android:text="@string/forgot_helptext"
        android:gravity="center_horizontal"
        android:textColor="#FFFFFF"
        android:textSize="20sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/forgot_helptext">

        <EditText
            style="@style/LoginSignupEditText"
            android:layout_width="fill_parent"
            android:id="@+id/accountEmail"
            android:inputType="textEmailAddress"
            android:hint="@string/signup_email"
            android:drawableLeft="@drawable/ic_email"/>

        <Button
            style="@style/BtnDefault"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnRequestPassword"
            android:text="@string/forgot_request"
            />

    </LinearLayout>

</RelativeLayout>
