<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="estudoar.cin.ufpe.br.estudoar.DoarFragment"
    android:fillViewport="true">

    <LinearLayout
        android:id="@+id/linear_layout_doar"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="15dp">

        <EditText
            style="@style/LoginSignupEditText"
            android:id="@+id/nome_doar"
            android:layout_width="fill_parent"
            android:hint="@string/doar_nome"
            android:inputType="text"
            >
            <requestFocus />
        </EditText>

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:id="@+id/fotoView"
            android:layout_marginTop="25dp"
            android:gravity="center_vertical"
            android:layout_gravity="center_horizontal"
            android:background="@color/estudoarBlue"
            />

        <Button
            style="@style/BtnDefault"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/doar_foto"
            android:id="@+id/btnFotoGaleria"
            android:layout_marginTop="25dp"
        />

        <Button
            style="@style/BtnDefault"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Tirar Foto"
            android:id="@+id/btnFotoCamera"
            android:layout_marginTop="25dp"
            />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Categoria"
            android:id="@+id/categoria_label"
            android:layout_marginTop="25dp"
            android:textSize="19dp"
        />

        <Spinner
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:id="@+id/spinner_doar"
            android:prompt="@string/spinner_categoria"
            android:background="#FFF"
            android:layout_marginTop="10dp"
        />

        <EditText
            style="@style/LoginSignupEditText"
            android:id="@+id/assunto_doar"
            android:layout_width="fill_parent"
            android:hint="@string/assunto_doar"
            android:inputType="text"
            android:layout_marginTop="25dp"
        />

        <EditText
            style="@style/LoginSignupEditText"
            android:id="@+id/descricao_doar"
            android:layout_width="fill_parent"
            android:layout_height="300px"
            android:hint="@string/descricao_doar"
            android:inputType="text"
            android:gravity="top"
            android:layout_marginTop="25dp"
        />

        <Button
            style="@style/BtnDefault"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/doar_add_endereco"
            android:id="@+id/btnAddAddress"
            android:layout_marginTop="25dp"
            />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/enderecoCheck"
            android:visibility="gone"
            android:layout_marginTop="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_check"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Endereço Adicionado"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"/>
        </LinearLayout>

        <Button
            style="@style/BtnDefault"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/doar_cadastrar"
            android:id="@+id/btnDoar"
            android:layout_marginTop="25dp"
        />

    </LinearLayout>

</ScrollView>
