<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="estudoar.cin.ufpe.br.estudoar.AddEnderecoActivity"
    android:orientation="vertical"
    android:background="#2C3D4F">

    <EditText
        style="@style/LoginSignupEditText"
        android:id="@+id/endereco"
        android:layout_width="fill_parent"
        android:hint="@string/add_address"
        android:inputType="text" />


    <Button
        style="@style/BtnDefault"
        android:id="@+id/getEndereco"
        android:text="@string/doar_add_endereco"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        style="@style/BtnDefault"
        android:id="@+id/btnGetLocal"
        android:text="@string/add_local_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"/>
    
    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/gMap"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:name="com.google.android.gms.maps.MapFragment"/>

</LinearLayout>
